--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Chartie™ — Think. Ink. Chart. BOOM!</title>
+  <title>Chartie™ — Think · Ink · Chart. BOOM!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Tailwind CDN -->
@@ -11,140 +11,152 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600&family=DM+Serif+Display:ital@0;1&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Chartie Shared Styles -->
+  <!-- Custom styles -->
   <link rel="stylesheet" href="style.css" />
 </head>
+<body class="bg-slate-950 text-slate-100 min-h-screen flex flex-col">
 
-<body class="bg-slate-50 text-slate-900 font-[Poppins]">
-
-  <!-- NAVBAR -->
-  <header class="bg-white/90 backdrop-blur border-b border-slate-200 sticky top-0 z-20">
-    <div class="max-w-7xl mx-auto px-6 py-3 flex items-center justify-between">
+  <!-- Top bar -->
+  <header class="border-b border-slate-800">
+    <div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex items-center gap-2">
-        <div class="h-10 w-10 rounded-xl bg-teal-400 flex items-center justify-center font-bold text-slate-900 shadow">
+        <div class="w-8 h-8 rounded-xl bg-amber-400 flex items-center justify-center text-slate-900 font-black text-lg shadow-inner">
           C
         </div>
         <div>
-          <div class="font-semibold tracking-tight text-slate-900">Chartie™</div>
-          <div class="text-xs text-slate-500">Think · Ink · Chart. BOOM!</div>
+          <div class="text-sm uppercase tracking-[0.2em] text-amber-300 font-semibold">
+            Chartie™
+          </div>
+          <div class="text-xs text-slate-400">
+            Think · Ink · Chart. BOOM!
+          </div>
         </div>
       </div>
 
-      <nav class="hidden sm:flex items-center gap-6 text-sm">
-        <a href="builder.html" class="text-slate-600 hover:text-teal-600 font-medium">
-          Open Builder
-        </a>
-        <span class="px-3 py-1 text-xs rounded-full bg-teal-50 text-teal-700 border border-teal-200">
-          Beta · Teacher-tested
-        </span>
+      <nav class="hidden md:flex gap-6 text-sm text-slate-300">
+        <a href="#how-it-works" class="hover:text-amber-300">How it works</a>
+        <a href="#for-teachers" class="hover:text-amber-300">For Teachers</a>
+        <a href="#pricing" class="hover:text-amber-300">Coming Next</a>
       </nav>
+
+      <a href="builder.html" class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-amber-400 text-slate-900 text-sm font-semibold shadow-lg hover:bg-amber-300 transition">
+        Open Builder
+        <span class="text-lg">↗</span>
+      </a>
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="bg-gradient-to-b from-white to-slate-50 py-16">
-    <div class="max-w-7xl mx-auto px-6 grid lg:grid-cols-2 gap-12 items-center">
+  <!-- Hero -->
+  <main class="flex-1">
+    <section class="py-10 md:py-16">
+      <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row items-center gap-10">
+        <!-- Text -->
+        <div class="flex-1 space-y-6">
+          <p class="inline-flex items-center gap-2 rounded-full border border-amber-400/40 bg-amber-400/10 px-3 py-1 text-xs font-semibold uppercase tracking-[0.2em] text-amber-200">
+            Built by a teacher • For teachers
+          </p>
 
-      <!-- TEXT -->
-      <div>
-        <h1 class="text-4xl sm:text-5xl font-semibold leading-tight mb-6">
-          Think. Ink. Chart. <span class="text-teal-500">BOOM!</span><br />
-          <span class="text-slate-800">Your anchor charts, leveled up.</span>
-        </h1>
+          <h1 class="text-3xl md:text-5xl font-extrabold tracking-tight">
+            Turn standards into
+            <span class="text-amber-300">student-ready anchor charts</span>
+            in minutes.
+          </h1>
 
-        <p class="text-slate-600 text-lg max-w-xl mb-8">
-          Chartie turns your ideas into clean, printable anchor charts — fast.
-          Pick a layout, type a topic, and watch the magic happen.
-          Built for teachers who want pretty <strong>AND</strong> practical.
-        </p>
+          <p class="text-slate-300 text-sm md:text-base leading-relaxed">
+            Chartie™ helps you go from TEKS, prompts, or big ideas to clean,
+            classroom-proud anchor charts you actually want on your walls.
+            No logins yet — just open the builder, think, ink, and chart.
+          </p>
 
-        <a
-          href="builder.html"
-          class="inline-flex items-center gap-2 bg-teal-500 hover:bg-teal-400 text-white font-semibold px-6 py-3 rounded-xl shadow-md transition">
-          Open Chart Builder
-          <span aria-hidden="true">↗️</span>
-        </a>
-      </div>
-
-      <!-- HERO PREVIEW (BEFORE vs AFTER) -->
-      <div class="relative">
-        <div class="bg-white border border-slate-200 rounded-xl shadow-md p-4">
-          <p class="text-xs font-bold uppercase text-slate-500 mb-1">Before</p>
-          <img
-            src="https://i.ibb.co/3cPHV50/messy-anchor-example.png"
-            alt="Before example"
-            class="rounded-lg border mb-6" />
-
-          <p class="text-xs font-bold uppercase text-slate-500 mb-1">After (Chartie)</p>
-
-          <div class="paper rounded-xl border border-slate-300 shadow p-4">
-            <div class="anchor-sheet bg-lined-light rounded-xl">
-              <div class="pt-5 pb-6 pr-6 pl-16">
-                <h2 class="marker-title text-2xl mb-2">Two-Step Equations</h2>
-
-                <div class="card mb-3">
-                  <h3 class="marker-h">Step-by-Step</h3>
-                  <ul class="pretty-list list-disc pl-6">
-                    <li>Undo addition/subtraction first</li>
-                    <li>Then undo multiplication/division</li>
-                    <li>Keep both sides balanced</li>
-                  </ul>
-                </div>
-
-                <div class="card">
-                  <h3 class="marker-h">Quick Example</h3>
-                  <div class="mathface space-y-1">
-                    <div>3x + 5 = 17</div>
-                    <div>3x = 12</div>
-                    <div>x = 4 ✔️</div>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="flex flex-wrap gap-3 items-center">
+            <a href="builder.html" class="inline-flex items-center gap-2 px-5 py-3 rounded-full bg-amber-400 text-slate-900 text-sm font-semibold shadow-lg hover:bg-amber-300 transition">
+              Open Chart Builder
+              <span class="text-lg">✏️</span>
+            </a>
+            <span class="text-xs md:text-sm text-slate-400">
+              Start with a TEKS, topic, or vocabulary set.
+            </span>
           </div>
 
+          <ul class="text-xs md:text-sm text-slate-300 space-y-1">
+            <li>• TEKS-friendly layouts</li>
+            <li>• Standards breakdown → student speak</li>
+            <li>• Export as PNG to drop into slides or print</li>
+          </ul>
+        </div>
+
+        <!-- Fake preview card -->
+        <div class="flex-1 w-full">
+          <div class="bg-slate-900/70 border border-slate-800 rounded-3xl p-4 shadow-2xl relative">
+            <div class="absolute -top-4 -left-4 bg-amber-400 text-slate-900 text-xs font-bold px-3 py-1 rounded-full shadow">
+              Chartie Preview
+            </div>
+
+            <div class="chart-bg-lined rounded-2xl p-5 border border-slate-800 shadow-inner">
+              <div class="flex items-center justify-between mb-3">
+                <h2 class="text-lg font-bold tracking-tight">
+                  Leaders of the Republic of Texas ⭐
+                </h2>
+                <span class="text-[10px] uppercase tracking-[0.2em] text-slate-500">
+                  Chartie™
+                </span>
+              </div>
+              <p class="text-xs text-slate-200 mb-3">
+                Big Idea: Different leaders shaped the Republic of Texas in
+                different ways — courage, vision, and tough decisions all
+                mattered.
+              </p>
+              <ul class="text-xs text-slate-100 space-y-1 mb-4">
+                <li>• <span class="font-semibold text-amber-200">Courage</span> – brave choices under pressure</li>
+                <li>• <span class="font-semibold text-amber-200">Vision</span> – planning for Texas’s future</li>
+                <li>• <span class="font-semibold text-amber-200">Decision-Making</span> – choosing the best path</li>
+              </ul>
+              <div class="text-[11px] text-slate-300 italic">
+                Ask yourself: <span class="font-semibold text-amber-200">“What leadership quality am I seeing here?”</span>
+              </div>
+            </div>
+
+            <div class="mt-4 flex items-center justify-between text-[10px] text-slate-400">
+              <span>RenEd Mode™ · Student-friendly</span>
+              <span>Export as PNG · PDF</span>
+            </div>
+          </div>
         </div>
       </div>
+    </section>
 
-    </div>
-  </section>
-
-  <!-- FEATURE STRIP -->
-  <section class="py-16 bg-white border-t border-slate-200">
-    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-10 text-center">
-
-      <div>
-        <div class="text-teal-500 text-3xl mb-3">⚡</div>
-        <h3 class="font-semibold text-lg mb-1">Fast, clean charts</h3>
-        <p class="text-slate-600 text-sm">No templates, no clutter — just type a topic.</p>
+    <!-- Simple “How it works” strip -->
+    <section id="how-it-works" class="border-t border-slate-800 bg-slate-900/40 py-10">
+      <div class="max-w-6xl mx-auto px-4 grid md:grid-cols-3 gap-6 text-sm">
+        <div>
+          <h3 class="font-semibold text-slate-100 mb-2">1. Start with a standard or idea</h3>
+          <p class="text-slate-400 text-xs">
+            Paste a TEKS, type a topic, or drop in vocabulary. Chartie helps you
+            clarify the “know” and “show.”
+          </p>
+        </div>
+        <div>
+          <h3 class="font-semibold text-slate-100 mb-2">2. Tweak the chart layout</h3>
+          <p class="text-slate-400 text-xs">
+            Choose fonts, background, and structure. Chartie keeps everything
+            clean, legible, and student-ready.
+          </p>
+        </div>
+        <div>
+          <h3 class="font-semibold text-slate-100 mb-2">3. Export & teach</h3>
+          <p class="text-slate-400 text-xs">
+            Download as PNG to paste into slides, print as a poster, or share
+            with your team. If it’s up, it’s stuck. 😉
+          </p>
+        </div>
       </div>
+    </section>
+  </main>
 
-      <div>
-        <div class="text-teal-500 text-3xl mb-3">🧠</div>
-        <h3 class="font-semibold text-lg mb-1">AI or manual layouts</h3>
-        <p class="text-slate-600 text-sm">Standard, Comparison, Cause/Effect, MathEx, CRex & more.</p>
-      </div>
-
-      <div>
-        <div class="text-teal-500 text-3xl mb-3">📥</div>
-        <h3 class="font-semibold text-lg mb-1">Export ready</h3>
-        <p class="text-slate-600 text-sm">Download as PNG or PDF — perfect for bulletin boards.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="border-t border-slate-200 py-5 bg-slate-50">
-    <div class="max-w-7xl mx-auto px-6 text-xs text-slate-500 flex justify-between items-center">
-      <span>© Chartie™ · Built for teachers who do the good work.</span>
-      <span>Think · Ink · Chart. BOOM!</span>
-    </div>
+  <footer class="border-t border-slate-800 py-4 text-center text-[10px] text-slate-500">
+    Chartie™ · A Renaissance Educators tool · “Enlightened minds enlighten minds.”
   </footer>
-
 </body>
 </html>
-
